# investment_agent

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  CURRENT_PROMPT.txt  LICENSE  Makefile  README.md  demo.py  pyproject.toml  run.ps1  seed.py
.claude/: settings.local.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
agents/: __init__.py  base.py  crypto.py  fundamental.py  macro.py  models.py  sentiment.py  summary_agent.py  technical.py  utils.py
api/: __init__.py  app.py  deps.py  log_format.py  models.py
api/routes/: alert_analytics.py  alerts.py  analysis_history.py  analytics.py  analyze.py  backtest.py  calibration.py  daemon.py  daemon_history.py  digest.py  drift.py  (+13 more)
backtesting/: __init__.py  batch_runner.py  data_slicer.py  engine.py  metrics.py  models.py  signal_corpus.py  walk_forward.py
charts/: __init__.py  analysis_charts.py  backtest_comparison.py  portfolio_charts.py  tracking_charts.py
cli/: __init__.py  analyze_cli.py  backtest_cli.py  charts_cli.py  daemon_cli.py  monitor_cli.py  portfolio_cli.py  report.py  signal_cli.py
config/: crypto_adoption.yaml
daemon/: __init__.py  config.py  jobs.py  scheduler.py  signal_comparator.py  watchlist_job.py
data/: backtest_data.json  backtest_report.html  backtest_report_cn.md  backtest_results_2020_2025.md  investment_agent.db  social_media_teaser.md
data_providers/: __init__.py  base.py  cache.py  cached_provider.py  ccxt_provider.py  dividend_cache.py  edgar_provider.py  factory.py  finnhub_provider.py  fred_provider.py  news_provider.py  parquet_cache.py  rate_limiter.py  sector_pe_cache.py  web_news_provider.py  yfinance_provider.py
db/: connection_pool.py  database.py
docs/: AGENT_SYNC.md  CODEX_INSTRUCTIONS.md  DEVELOPER_INSTRUCTIONS.md  ROADMAP.md  SESSION_CONTEXT.md  USAGE_GUIDE.md  USER_MANUAL.md  architecture_v4.md  architecture_v5.md
engine/: __init__.py  accuracy_tracker.py  aggregator.py  analytics.py  correlation.py  digest.py  drift_analyzer.py  drift_detector.py  dynamic_threshold.py  journal_analytics.py  llm_synthesis.py  monte_carlo.py  pipeline.py  portfolio_overlay.py  regime.py  regime_history.py  sector.py  stress_test.py  weight_adapter.py
export/: __init__.py  portfolio_report.py
frontend/: .impeccable.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
landing/: index.html  package-lock.json  package.json  tailwind.config.js
monitoring/: __init__.py  checker.py  models.py  monitor.py  store.py
notifications/: __init__.py  email_dispatcher.py  telegram_dispatcher.py
portfolio/: __init__.py  manager.py  models.py  profiles.py
project/: investment_agent_v4_review.md
scripts/: ensure_pid.py  fetch_finbert.py  verify_close_01_finbert.py  verify_close_02_finnhub.py  verify_close_03_daemon_pid.py  verify_close_04_target_weight.py  verify_close_05_rules_panel.py  verify_close_06_heatmap_tooltip.py
tasks/: 001_database_and_models.md  002_drift_analyzer.md  003_portfolio_context_manager.md  004_data_provider.md  005_technical_agent.md  006_fundamental_agent.md  007_macro_regime_agent.md  008_5_drift_enhancement.md  008_signal_aggregator.md  009_cli_report.md  010_position_monitoring.md  011_signal_tracking.md  012_chart_generation.md  013_backtesting_framework.md  014_5_analysis_detail_mode.md  014_monitoring_daemon.md  015_5_fundamental_enhancement.md  018_crypto_agent.md  019_sector_rotation.md  025_thesis_tracking_loop.md  026_claude_weekly_summary.md
tests/: conftest.py  test_001_db.py  test_002_drift.py  test_003_portfolio.py  test_004_data_providers.py  test_005_technical_agent.py  test_006_fundamental_agent.py  test_007_macro_agent.py  test_008_5_drift_enhancement.py  test_008_pipeline.py  test_008_signal_aggregator.py  test_009_e2e.py  test_009_report.py  test_010_checker.py  test_010_monitor.py  test_011_signal_store.py  test_011_signal_tracker.py  test_012_charts.py  test_013_backtesting.py  test_014_daemon.py  test_018_crypto_agent.py  test_019_close_position.py  test_019_sector_correlation.py  test_020_weight_adapter.py  test_021_batch_runner.py  test_022_api.py  test_025_thesis_tracking.py  test_026_summary_agent.py  test_027_news_provider.py  test_027_sentiment_agent.py  test_028_catalyst_scanner.py  test_029_portfolio_overlay.py  test_030_correlation.py  test_031_email_dispatcher.py  test_032_telegram_dispatcher.py  test_033_export.py  test_034_watchlist.py  test_035_analytics.py  test_036_tech_debt_fixes.py  test_037_multi_portfolio.py  (+54 more)
tracking/: __init__.py  store.py  tracker.py
watchlist/: __init__.py  manager.py
(+307 files in other folders)
