[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "investment-agent"
version = "0.1.0"
description = "Continuous portfolio monitoring and investment analysis agent"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.19",
    "yfinance>=0.2",
    "ccxt>=4.0",
    "fredapi>=0.5",
    "pandas>=2.0",
    "pandas-ta>=0.4.67b0",
    "httpx>=0.27",
    "plotly>=5.0",
    "apscheduler>=3.10,<4.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "network: requires network access",
]

[tool.hatch.build.targets.wheel]
packages = ["agents", "api", "backtesting", "charts", "cli", "daemon", "data_providers", "db", "engine", "monitoring", "portfolio", "tracking"]
