[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "investment-agent"
version = "0.4.0"
description = "Self-hosted portfolio monitoring system with multi-agent analysis. Tracks your thesis, monitors positions, tells you when reality diverges from your plan."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["investment", "portfolio", "monitoring", "trading", "analysis", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "aiosqlite>=0.19",
    "arch>=6.0",
    "yfinance>=0.2",
    "fredapi>=0.5",
    "pandas>=2.0",
    "pandas-ta>=0.4.25b0",
    "pyarrow>=14.0",
    "httpx>=0.27",
    "plotly>=5.0",
    "apscheduler>=3.10,<4.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.42",
]
exchange = [
    "ccxt>=4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
all = [
    "investment-agent[llm,exchange,dev]",
]

[project.urls]
Homepage = "https://github.com/FredHuFuture/investment_agent"
Repository = "https://github.com/FredHuFuture/investment_agent"
Issues = "https://github.com/FredHuFuture/investment_agent/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "network: requires network access",
]

[tool.hatch.build.targets.wheel]
packages = ["agents", "api", "backtesting", "charts", "cli", "daemon", "data_providers", "db", "engine", "monitoring", "portfolio", "tracking"]
